<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="6dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:progress="75"
        android:progressDrawable="@drawable/progressbar_color"
        android:id="@+id/settingAccount_progress"/>

    <ImageView
        android:id="@+id/account_prev"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/prev" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingAccount_topic"
        android:layout_marginStart="40dp"
        android:textColor="#000"
        android:textSize="32sp"
        android:id="@+id/settingAccount_topic"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="text"
        android:theme="@style/EditText"
        android:textSize="20sp"
        android:hint="@string/username"
        android:id="@+id/settingAccount_username"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:theme="@style/EditText"
        android:textSize="20sp"
        android:id="@+id/settingAccount_password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:hint="@string/password_repeat"
        android:theme="@style/EditText"
        android:textSize="20sp"
        android:id="@+id/settingAccount_password_repeat"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/round_button"
        android:textColor="#8a8a8a"
        android:id="@+id/settingAccount_next"/>

    <WebView
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="100dp" />
</LinearLayout>