<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/home"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/prev" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_edit_text"
            android:gravity="center"
            android:hint="@string/username"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="20sp"
            android:theme="@style/EditText" />

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_edit_text"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="12dp"
                android:singleLine="true"
                android:textSize="20sp"
                android:theme="@style/EditText" />

            <ImageButton
                android:id="@+id/showHide"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/password"
                android:layout_alignTop="@+id/password"
                android:layout_alignBottom="@+id/password"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/hide" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CheckBox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_password" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/login"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="50dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="|"
            android:textSize="16sp" />
        <!--注册-->
        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50" />
    </LinearLayout>
</LinearLayout>